--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- User Agent Analyzer -->
+		<dependency>
+			<groupId>nl.basjes.parse.useragent</groupId>
+			<artifactId>yauaa</artifactId>
+			<version>7.26.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
